// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="sc-AxjAm gzrQDD"
>
  <h1>
    Foo
  </h1>
</div>
`;

exports[`renders images 1`] = `
<div
  className="sc-AxjAm gzrQDD"
>
  <p>
    <img
      alt="foo"
      onClick={[Function]}
      src="http://bar/baz.png"
    />
  </p>
</div>
`;
